# rustc_public

./: .gitignore  Cargo.toml  build.rs  josh-sync.toml  plz  rust-toolchain.toml  rust-version  rustfmt.toml
.github/scripts/: run_own_tests.sh
.github/workflows/: demo.yml  deploy_mdbook.yml  format.yml  nightly.yml  rustc-pull.yml  rustc_pull.yml
book/src/: contributing.md  initial.md
demo/: Cargo.toml  build.rs  run_demo.sh
demo/src/: main.rs
devtool/: Cargo.toml
devtool/src/: main.rs
rustc_public/: Cargo.toml  build.rs  josh-sync.toml  rust-toolchain.toml
rustc_public/src/: compiler_interface.rs  lib.rs  ty.rs
rustc_public/src/rustc_internal/: mod.rs  pretty.rs
rustc_public/src/unstable/convert/: internal.rs
rustc_public/src/unstable/convert/stable/: mir.rs  ty.rs
rustc_public/tests/print/: async-closure.stdout
scripts/: pre-push.sh
test-drive/: Cargo.toml
test-drive/src/: main.rs  sanity_checks.rs
tests/: compiletest.rs
tests/fixme/: ice_too_generic.stderr
tests/print/: async-closure.stdout
tools/test-drive/: Cargo.toml
