[package]
name = "rustc_public"
version = "0.1.0"
authors = ["rustc_public team"]
description = "Define compiler intermediate representation usable by external tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/project-stable-mir"
edition = "2024"

[dependencies]
scoped-tls = "1.0"
serde = { version = "1.0.125", features = [ "derive" ] }
tracing = "0.1"

[build-dependencies]
rustversion = "1"

[dev-dependencies]
regex = "1.5.5"
ui_test = "0.30.2"

[[test]]
name = "compiletest"
harness = false

# Cargo workspace for utility tools used to check stable-mir in CI
[workspace]
resolver = "2"
members = [
    "test-drive",
]

exclude = [
    "build",
    "target",
    "demo",
]

[features]
# tidy-alphabetical-start
# Provides access to APIs that expose internals of the rust compiler.
# APIs enabled by this feature are unstable. They can be removed or modified
# at any point and they are not included in the crate's semantic versioning.
rustc_internal = []
# tidy-alphabetical-end

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
